# rpi-final-acceptance-test

./: .flake8  .gitignore  .gitmodules  README.md  README.rst  git.md  nicegui-app.service  pyproject.toml  ssh-agent-forwarding.md
.github/workflows/: pipeline.yml
fat-testjig/: configuration.yaml  local_file_picker.py  main.py  nicegui-app.service  requirements.txt  test_ui.py
fat-testjig/tests/: pytest.ini
python/: add_path_to_venv.sh  create_release_zip.py  encrypt_decrypt.py  install_new_wheel.py
python/drivers/testjig/: power_control.py
python/utils/logging/: redis_logging.py
rpi_final_acceptance_test/: local_file_picker.py  main.py  startup.py  test.py
rpi_final_acceptance_test/tests/: conftest.py  pytest.ini  test_program_device.py  test_pytest.py  test_sample_application.py
testjig/: react-flask-app.service
testjig/python/: .flaskenv  app.py  pytest.ini  requirements.txt
testjig/python/tests/: config_testjig.yml  conftest.py  test_critical.py  test_sample.py
testjig/react-flask-app/: .env  package.json
testjig/react-flask-app/src/: App.tsx  index.tsx
testjig/react-flask-app/src/components/: Header.tsx  Icons.tsx  LogWindow.tsx  Sidebar.tsx  index.ts
testjig/react-flask-app/src/const/: createCSV.ts  index.ts  time.ts
testjig/react-flask-app/src/pages/: RunTests.tsx  SessionDetails.tsx  Summary.tsx  index.ts
