[project]
name = 'rpi_final_acceptance_test'
authors = [
  { name='Xander Hendriks', email='xander@nx-solutions.com' },
]
description = 'Final Acceptance Test Testjig'
readme = 'README.rst'
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dynamic = ['version']
dependencies = [
    'aiofiles==24.1.0',
    'aiohappyeyeballs==2.4.0',
    'aiohttp==3.10.5',
    'aiosignal==1.3.1',
    'annotated-types==0.7.0',
    'anyio==4.4.0',
    'async-timeout==4.0.3',
    'attrs==24.2.0',
    'bidict==0.23.1',
    'certifi==2024.8.30',
    'cffi==1.17.1',
    'charset-normalizer==3.3.2',
    'click==8.1.7',
    'colorama==0.4.6',
    'cryptography==43.0.1',
    'docutils==0.21.2',
    'exceptiongroup==1.2.2',
    'fastapi==0.114.2',
    'flake8==7.1.1',
    'frozenlist==1.4.1',
    'h11==0.14.0',
    'httpcore==1.0.5',
    'httptools==0.6.1',
    'httpx==0.27.2',
    'idna==3.10',
    'ifaddr==0.2.0',
    'iniconfig==2.0.0',
    'itsdangerous==2.2.0',
    'Jinja2==3.1.4',
    'markdown2==2.5.0',
    'MarkupSafe==2.1.5',
    'mccabe==0.7.0',
    'multidict==6.1.0',
    'nicegui==2.1.0',
    'orjson==3.10.7',
    'packaging==24.1',
    'pluggy==1.5.0',
    'pscript==0.7.7',
    'pycodestyle==2.12.1',
    'pycparser==2.22',
    'pydantic==2.9.1',
    'pydantic_core==2.23.3',
    'pyflakes==3.2.0',
    'Pygments==2.18.0',
    'pyserial==3.5',
    'pytest==8.3.3',
    'pytest-json-report==1.5.0',
    'pytest-metadata==3.1.1',
    'pytest-order==1.3.0',
    'python-dotenv==1.0.1',
    'python-engineio==4.9.1',
    'python-multipart==0.0.9',
    'python-socketio==5.11.4',
    'PyYAML==6.0.2',
    'requests==2.32.3',
    'simple-websocket==1.0.0',
    'sniffio==1.3.1',
    'starlette==0.38.5',
    'tomli==2.0.1',
    'typing_extensions==4.12.2',
    'urllib3==2.2.3',
    'uvicorn==0.30.6',
    'uvloop==0.20.0',
    'vbuild==0.8.2',
    'watchfiles==0.24.0',
    'websockets==13.0.1',
    'wsproto==1.2.0',
    'yarl==1.11.1'
]

[tool.setuptools.package-dir]
rpi_final_acceptance_test = 'rpi_final_acceptance_test'
nxs_python = 'python'

[project.scripts]
rpi_final_acceptance_test = 'rpi_final_acceptance_test.startup:main'

[project.urls]
Homepage = 'https://github.com/xanderhendriks/rpi-final-acceptance-test'
Issues = 'https://github.com/xanderhendriks/rpi-final-acceptance-test/issues'

[tool.setuptools_scm]
write_to = 'rpi_final_acceptance_test/version.py'
local_scheme = 'no-local-version'

[build-system]
requires = ['setuptools==74.1.2', 'wheel==0.44.0', 'setuptools-scm==8.1.0']
build-backend = 'setuptools.build_meta'
