[project]
name = 'rpi-final-acceptance-test'
authors = [
  { name='Xander Hendriks', email='xander@nx-solutions.com' },
]
description = 'Final Acceptance Test Testjig'
readme = 'README.rst'
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dynamic = ['version']
dependencies = [
  
]

[tool.setuptools.package-dir]
rpi_final_acceptance_test = 'rpi_final_acceptance_test'
nxs_python = 'nxs_python'

[project.scripts]
rpi_final_acceptance_test = 'rpi_final_acceptance_test.startup:main'

[project.urls]
Homepage = 'https://github.com/xanderhendriks/rpi-final-acceptance-test'
Issues = 'https://github.com/xanderhendriks/rpi-final-acceptance-test/issues'

[tool.setuptools_scm]
write_to = 'rpi_final_acceptance_test/version.py'
local_scheme = 'no-local-version'

[build-system]
requires = ['setuptools==74.1.2', 'wheel==0.44.0', 'setuptools-scm==8.1.0']
build-backend = 'setuptools.build_meta'
